[package]
name = "overlee"
version = "0.1.0"
authors = ["Davis Van Sant <davisvansant@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
overlee_client = { path = "../overlee_client" }
tokio = { version = "1.28.2", features = ["macros", "sync", "time"] }
