[package]
name = "overlee_build"
version = "0.1.0"
authors = ["Davis Van Sant <davisvansant@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# currently disabled rustfmt for testing - the compiled proto isnt pretty, but its working
[build-dependencies.tonic-build]
version = "0.4.2"
default-features = false
features = ["transport", "prost"]
