[package]
name = "overlee_client"
version = "0.1.0"
authors = ["Davis Van Sant <davisvansant@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.tonic]
version = "0.3.0"
default-features = false
features = ["transport", "codegen", "prost"]

[dependencies]
overlee_build = { path = "../overlee_build" }
prost = "0.6.1"
tokio = { version = "0.2.22", features = ["macros", "sync", "stream", "time"] }
