[package]
name = "overlee_client"
version = "0.1.0"
authors = ["Davis Van Sant <davisvansant@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.tonic]
version = "0.4.3"
default-features = false
features = ["transport", "codegen", "prost"]

[dependencies]
overlee_build = { path = "../overlee_build" }
prost = "0.7.0"
tokio = { version = "1.7.0", features = ["macros", "sync", "time"] }
