[package]
name = "overlee_server"
version = "0.1.0"
authors = ["Davis Van Sant <davisvansant@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.tonic]
version = "0.4.1"
default-features = false
features = ["transport", "codegen", "prost"]

[dependencies]
overlee_build = { path = "../overlee_build" }
prost = "0.7.0"
tokio = { version = "1.4.0", features = ["macros", "rt-multi-thread", "sync", "time"] }

# [build-dependencies]
# overlee_build = { path = "../overlee_build" }
